fix: [PIE-1474]: updating pr for alignments (#5638)
* fix: [PIE-1474]: updating pr for padding

* Update PipelinesPage.test.tsx.snap

* fix: snapshots

--- a/src/modules/70-pipeline/pages/pipelines/views/PipelineCard/PipelineCard.module.scss
+++ b/src/modules/70-pipeline/pages/pipelines/views/PipelineCard/PipelineCard.module.scss
@@ -6,7 +6,6 @@
   }
   .label {
     flex-shrink: 0;
-    margin-left: -4px !important;
   }
   :global {
     .bp3-popover-wrapper {
@@ -47,17 +46,11 @@
     }
   }
 
-  .alignIcon {
-    margin-bottom: 8px !important;
-    margin-top: -7px !important;
-    margin-left: -4px !important;
-  }
-
-  .alignName {
-    margin-top: -8px !important;
-    margin-left: -4px !important;
-  }
-  .alignButtons {
-    margin-left: -5px !important;
+  :global {
+    .Card--cardMenu .Card--dots {
+      position: absolute;
+      top: -9px;
+      right: -19px;
+    }
   }
 }
